[package]
name = "bettervoxel_game_config"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy_ecs = { version = "0.14.1", features = ["serialize"] }
bevy_input = { version = "0.14.1", features = ["serialize"] }
bevy_transform = { version = "0.14.1", features = ["serialize"] }
bevy_math = { version = "0.14.1", features = ["serialize"] }
bevy_color = { version = "0.14.2", features = ["serialize"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
smol_str = { version = "0.2.2", features = ["serde"] }