[package]
name = "bettervoxel_game_config"
version = "0.1.3"

edition = "2021"

[dependencies]
bevy_input = { version = "0.14", features = ["serialize"] }
bevy_transform = { version = "0.14", features = ["serialize"] }
bevy_math = { version = "0.14", features = ["serialize"] }
bevy_color = { version = "0.14", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"